--- a/src/styles/promotions.scss
+++ b/src/styles/promotions.scss
@@ -42,7 +42,7 @@ h3 {
 
     .box-container {
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(80rem, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(70rem, 1fr));
         overflow: hidden;
         padding: 0 2rem;
 
@@ -59,6 +59,9 @@ h3 {
                 background: $blue;
                 box-shadow: $box-shadow;
                 text-shadow: $text-shadow;
+            }
+            h2, p {
+                color: $white;
             }
             ul {
                 list-style: none;
@@ -111,14 +114,13 @@ h3 {
         }
         .video-box {
             position: relative;
+            
 
             video {
                 position: absolute;
-                bottom: -12.5%;
-                left: 50%;
-                width: 73.5%;
-                height: 110%;
-                transform: translate(-50%,0%);
+                bottom: 0%;
+                left: 15%;
+                width: 72.5%;
             }
         }
     }
