--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -204,25 +204,29 @@ nav {
 }
 // Hero Settings
 .hero {
-    @include flex-center();
-    min-height: 80dvh;
-    background: #401541;
-    gap: .5rem;
-    padding: 0 2%;
-    color: $white;
-    line-height: 1;
-    width: 100%;
+    background: #401542;
+    overflow: hidden;
+    
+    .hero-content-box {
+        position: relative;
+        min-height: 100vh;
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(60rem, 1fr));
+        gap: .5rem;
+        padding-left: 2rem;
+    }
 
     .content {
-        display: flex;
+        @include flex-center();
         flex-direction: column;
-        gap: 1rem;
+        text-align: center;
 
         h1 {
             position: relative;
             font-size: 2rem;
             font-family: $fontInter;
             padding-left: 5rem;
+            color: $white;
 
             &::before {
                 content: '';
@@ -238,12 +242,26 @@ nav {
             font-size: $title-font-size;
             font-weight: $title-font-weight;
             letter-spacing: .1rem;
+            color: $white;
+        }
+        p {
+            color: $white;
         }
 
         .buttons {
             margin-top: 2rem;
             display: flex;
             gap: 1rem;
+        }
+    }
+    .hero-video {
+        position: relative;
+
+        video {
+            position: absolute;
+            bottom: 0;
+            left: 15%;
+            width: 72.5%;
         }
     }
 }
@@ -1131,7 +1149,7 @@ nav {
     html {
         font-size: 55%;
     }
-    .promo-video {
+    .promo-video, .hero-video {
         display: none;
     }
 }
@@ -1185,9 +1203,22 @@ nav {
         font-size: 50%;
     }
     .hero {
-        padding: 15rem 1rem;
+        .content {
+            width: 100%;
+            text-align: center;
+        }
     }
-    .hero-video {
-        display: none;
+    .nav-contact {
+        position: fixed;
+        top: 10.5rem;
+        left: 0;
+        right: 0;
+        background: $white;
+        text-align: center;
+        padding: 1rem 0;
+        
+        a {
+            font-size: 2.5rem;
+        }
     }
 }
