--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -155,7 +155,11 @@ nav {
         height: 97.5%;
     }
     .nav-contact {
+        display: flex;
+        text-align: center;
+        flex-direction: column;
         a {
+            line-height: 1.25;
             color: $purple;
         }
     }
@@ -1202,23 +1206,61 @@ nav {
     html {
         font-size: 50%;
     }
-    .hero {
-        .content {
-            width: 100%;
-            text-align: center;
+    .hero, .promotions {
+        .content, .promotions-hero-content {
+            display: flex;
+            justify-content: center;
+            align-items: flex-start;
+            text-align: left;
+            padding: 0;
+
+            h1 {
+                font-size: 3rem;
+            }
+
+            h2 {
+                font-size: 3.5rem;
+            }
+            .buttons {
+                display: flex;
+                flex-direction: column;
+
+                a {
+                    width: 100%;
+                }
+            }
+            p {
+                display: flex;
+                font-size: 1.45rem;
+                line-height: 1.25;
+                text-align: left;
+            }
+        }
+    }
+    .promotions-hero-content {
+        h1 {
+            margin-top: 8rem;
         }
     }
     .nav-contact {
         position: fixed;
-        top: 10.5rem;
+        top: 10.25rem;
         left: 0;
-        right: 0;
         background: $white;
         text-align: center;
-        padding: 1rem 0;
+        padding: 1rem;
+        width: 100%;
         
         a {
             font-size: 2.5rem;
+        }
+    }
+}
+
+@media (max-width: 450px) {
+    .nav-contact {
+        a {
+            font-size: 2rem;
         }
     }
 }
