--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -80,11 +80,15 @@ h3,h4,h5,h6 {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
-a,p,li {
+a,p,li,label {
     font-family: $fontInter;
     font-size: $font-size;
     line-height: 1;
 }
+select:invalid {
+  border: 2px solid red;
+}
+
 a {
     text-decoration: none;
     line-height: 1;
@@ -867,7 +871,7 @@ nav {
             width: 99%;
             padding-right: 2rem;
 
-            input,textarea {
+            input,textarea,select {
                 margin: 1.1rem;
                 padding: 1.5rem;
                 border: none;
@@ -877,6 +881,9 @@ nav {
                 width: 100%;
                 resize: none;
                 box-shadow:$box-shadow;
+            }
+            select {
+                margin-right: 1rem;
             }
 
             button[type="submit"] {
@@ -888,11 +895,24 @@ nav {
                 color: $white;
                 border: none;
                 margin-left: 1rem;
+                margin-top: 1rem;
 
                 &:hover {
                     transform: scale(1.01);
                     box-shadow: $box-shadow;
                 }
+            }
+            label {
+                display: block;
+                text-align: center;
+                font-size: $font-size;
+                color: $white;
+                margin-left: 1.5rem;
+                margin-bottom: .5rem;
+            }
+            p {
+                text-align: center;
+                color: $white;
             }
         }
     }
